update for reproducibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pyyaml
-geopandas
-pandas
+geopandas==0.7.0
+pandas==1.0.3
 pymssql==2.1.4
-pdsql
-gistools
-rtree
+pdsql==1.2.34
+gistools==1.2.18
+rtree==0.9.4
